# models/unregisterHookRequest.ts
@@ -1,0 +1,5 @@
+export interface UnregisterHookRequest {
+  type: string
+  url: string
+  loopId: string
+}
